[package]
name = "code_harmony_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
actix-session = "0.4"
actix-redis = "0.9"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tokio-postgres = "0.7.5"
deadpool-postgres = "0.10.0"
config = "0.11.0"