[package]
name = "code_harmony_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.0-beta.19"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-web-actors = "4.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio-postgres = { version = "0.7.5", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
deadpool-postgres = "0.10.0"
config = "0.11.0"
derive_more = "0.99.16"
mime = "0.3.16"
thiserror = "1.0.30"
wildmatch = "2.1.0"
pct-str = "1.1.0"
futures = "0.3.19"
chrono = { version = "0.4.19", features = ["serde"] }
pg_mapper = "0.2.0"
argon2 = "0.3.4"
bimap = "0.6.2"
rand = "0.8.5"
dotenv = "0.15.0"
itertools = "0.10.3"
uuid = { version = "0.8.2", features = ["v4"] }
reqwest = { version = "0.11.10", features = ["json"] }
url = "2.2.2"
rustls-pemfile = "1.0.0"
postgres-native-tls = "0.5.0"
native-tls = "0.2.10"
